# rocprof-unified-viewer

./: .gitignore  LICENSE  README.md  collect-att.sh  collect.sh  disasm_loadwidth.py  isa_glossary.py  pyproject.toml  rebuild-ggml.sh  rocprof_unified_viewer.py  serve.py
.github/workflows/: ci.yml
docs/: annotate_fusion_analysis.py  annotate_system_view.py
tests/: make_fixtures.py  test_lint.py  test_smoke.py
tests/fixtures/: decode_fetch_counter_collection.csv  decode_hip_api_trace.csv  decode_kernel_trace.csv  decode_stall_counter_collection.csv
